<resources>

    <!--COMMON-->
    <string name="app_name">VK Tracker</string>


    <string name="settings">Настройки</string>
    <string name="settings_description">Кастомизация и управление</string>

    <string name="statistics">Статистика</string>
    <string name="statistics_description">Информация об отслеживании</string>

    <string name="app_version">VK T 1.0</string>
    <string name="about_app">О приложении</string>



    <string name="friends">Друзья</string>
    <string name="my_friends">Мои друзья</string>
    <string name="tracking">Отслеживание</string>
    <string name="important">Важные</string>
    <string name="faves">Закладки</string>
    <string name="profile">Профиль</string>
    <string name="subscribers">Подписчики</string>
    <string name="users">Пользователи</string>
    <string name="find_user">Найти пользователя</string>
    <string name="password">Пароль</string>
    <string name="email_or_phone_number">Почта или номер телефона</string>
    <string name="login_to_vk_account">Вход в аккаунт VK</string>
    <string name="login">Войти</string>
    <string name="authorization">Авторизация</string>
    <string name="further">Продолжить</string>
    <string name="twoFA">Двухфакторная аутентификация</string>
    <string name="confirmation_code">Код подтверждения</string>
    <string name="confirm">Подтвердить</string>


    <!--ACTIONS-->
    <string name="to_retry">Повторить попытку</string>
    <string name="logout">Выйти</string>
    <string name="cancel">Отменить</string>
    <string name="track">Отслеживать</string>
    <string name="close">Закрыть</string>
    <string name="resend_code_with_seconds">Отправить повторно %1$s</string>
    <string name="resend_code">Отправить повторно</string>


    <!--QUESTIONS-->
    <string name="question_logout">Выйти из аккаунта?</string>
    <string name="no_code_received">Не пришел код?</string>


    <!--MESSAGES-->
    <string name="no_friends">Список друзей пуст</string>
    <string name="no_subscribers">У вас нет подписчиков</string>
    <string name="no_users_in_faves">Нет пользователей в закладках</string>
    <string name="explanation_logout">При этом все данные сохранятся, но отслеживание будет остановлено.</string>
    <string name="welcome_to_vkt">Добро пожаловать в VK T</string>
    <string name="code_send">Код верификации отправлен на %1$s.\nВведите его, чтобы войти.</string>


    <!--ERROR MESSAGES-->
    <string name="loading_error">При загрузке данных произошла ошибка.\nПроверьте Ваше подключение к сети.</string>
    <string name="incorrect_login_or_password">Введен неверный логин или пароль</string>
    <string name="auth_error">Не удалось войти</string>
    <string name="two_fa_error_title">Ошибка аутентификации</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="internet_connection_error">Отсутствует подключение к интернету</string>
    <string name="wrong_code">Неверный код</string>
    <string name="timed_out_error">Истекло время ожидания</string>


    <!--WELCOME FRAGMENT-->
    <string name="welcome_title_design">Дизайн</string>
    <string name="welcome_description_design">Современный и функциональный Material3 дизайн</string>

    <string name="welcome_title_tracking">Отслеживание пользователей</string>
    <string name="welcome_description_tracking">Следите за всеми изменениями в профилях Ваших друзей и знакомых</string>

</resources>